--- a/client/src/style/index.css
+++ b/client/src/style/index.css
@@ -630,6 +630,14 @@ video {
   z-index: 50;
 }
 
+.z-\[2\]{
+  z-index: 2;
+}
+
+.z-\[1\]{
+  z-index: 1;
+}
+
 .col-span-1{
   grid-column: span 1 / span 1;
 }
