--- a/client/src/style/index.css
+++ b/client/src/style/index.css
@@ -630,12 +630,12 @@ video {
   z-index: 50;
 }
 
-.z-\[2\]{
-  z-index: 2;
-}
-
 .z-\[1\]{
   z-index: 1;
+}
+
+.z-\[2\]{
+  z-index: 2;
 }
 
 .col-span-1{
@@ -646,8 +646,21 @@ video {
   grid-column: span 2 / span 2;
 }
 
+.col-span-3{
+  grid-column: span 3 / span 3;
+}
+
 .col-span-4{
   grid-column: span 4 / span 4;
+}
+
+.row-span-1{
+  grid-row: span 1 / span 1;
+}
+
+.mx-2{
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
 }
 
 .mx-4{
@@ -750,6 +763,10 @@ video {
   margin-top: -0.9rem;
 }
 
+.mr-auto{
+  margin-right: auto;
+}
+
 .block{
   display: block;
 }
@@ -834,10 +851,6 @@ video {
   height: 8rem;
 }
 
-.h-\[90vh\]{
-  height: 90vh;
-}
-
 .h-fit{
   height: -moz-fit-content;
   height: fit-content;
@@ -851,8 +864,16 @@ video {
   height: 100vh;
 }
 
+.max-h-\[50rem\]{
+  max-height: 50rem;
+}
+
 .min-h-\[500px\]{
   min-height: 500px;
+}
+
+.min-h-\[30rem\]{
+  min-height: 30rem;
 }
 
 .w-1\/3{
@@ -899,6 +920,15 @@ video {
   width: 100vw;
 }
 
+.w-fit{
+  width: -moz-fit-content;
+  width: fit-content;
+}
+
+.w-\[100px\]{
+  width: 100px;
+}
+
 .max-w-\[500px\]{
   max-width: 500px;
 }
@@ -917,6 +947,10 @@ video {
 
 .flex-\[0\.8\]{
   flex: 0.8;
+}
+
+.flex-\[0\.2\]{
+  flex: 0.2;
 }
 
 .table-auto{
@@ -969,6 +1003,14 @@ video {
 
 .grid-cols-\[auto\]{
   grid-template-columns: auto;
+}
+
+.grid-cols-5{
+  grid-template-columns: repeat(5, minmax(0, 1fr));
+}
+
+.grid-rows-2{
+  grid-template-rows: repeat(2, minmax(0, 1fr));
 }
 
 .grid-rows-3{
@@ -1066,8 +1108,20 @@ video {
   place-self: start;
 }
 
+.place-self-end{
+  place-self: end;
+}
+
+.place-self-center{
+  place-self: center;
+}
+
 .self-start{
   align-self: flex-start;
+}
+
+.justify-self-end{
+  justify-self: end;
 }
 
 .overflow-hidden{
@@ -1126,12 +1180,28 @@ video {
   border-left-width: 0px;
 }
 
+.border-l-4{
+  border-left-width: 4px;
+}
+
 .border-r-0{
   border-right-width: 0px;
 }
 
 .border-t-2{
   border-top-width: 2px;
+}
+
+.border-r-2{
+  border-right-width: 2px;
+}
+
+.border-l-2{
+  border-left-width: 2px;
+}
+
+.border-l-8{
+  border-left-width: 8px;
 }
 
 .border-dark{
@@ -1172,6 +1242,12 @@ video {
   border-color: transparent;
 }
 
+.border-x-semiBlue{
+  --tw-border-opacity: 1;
+  border-left-color: rgb(114 174 200 / var(--tw-border-opacity));
+  border-right-color: rgb(114 174 200 / var(--tw-border-opacity));
+}
+
 .border-b-\[\#E1E1E1\]{
   --tw-border-opacity: 1;
   border-bottom-color: rgb(225 225 225 / var(--tw-border-opacity));
@@ -1180,6 +1256,15 @@ video {
 .border-b-semiBlue{
   --tw-border-opacity: 1;
   border-bottom-color: rgb(114 174 200 / var(--tw-border-opacity));
+}
+
+.border-l-semiBlue{
+  --tw-border-opacity: 1;
+  border-left-color: rgb(114 174 200 / var(--tw-border-opacity));
+}
+
+.border-l-transparent{
+  border-left-color: transparent;
 }
 
 .bg-\[\#F5F5F3\]{
@@ -1206,6 +1291,11 @@ video {
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
 }
 
+.bg-gray-300{
+  --tw-bg-opacity: 1;
+  background-color: rgb(209 213 219 / var(--tw-bg-opacity));
+}
+
 .bg-lightWhite{
   --tw-bg-opacity: 1;
   background-color: rgb(237 241 243 / var(--tw-bg-opacity));
@@ -1226,28 +1316,9 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.bg-\[url\(\"\.\/src\/assets\/bannerImages\/Tech-Essentials-Await-You\.jpeg\"\)\]{
-  background-image: url("./src/assets/bannerImages/Tech-Essentials-Await-You.jpeg");
-}
-
-.bg-banner1{
-  background-image: url('./src/assets/bannerImages/Tech-Essentials-Await-You.jpeg');
-}
-
-.bg-\[url\(\'\.\/src\/assets\/bannerImages\/Tech-Essentials-Await-You\.jpeg\'\)\]{
-  background-image: url('./src/assets/bannerImages/Tech-Essentials-Await-You.jpeg');
-}
-
-.bg-\[url\(\'\.\/src\/assets\/bannerImages\/Your-One-Stop-Tech-Shop\.jpeg\'\)\]{
-  background-image: url('./src/assets/bannerImages/Your-One-Stop-Tech-Shop.jpeg');
-}
-
-.bg-cover{
-  background-size: cover;
-}
-
-.bg-center{
-  background-position: center;
+.bg-gray-200{
+  --tw-bg-opacity: 1;
+  background-color: rgb(229 231 235 / var(--tw-bg-opacity));
 }
 
 .object-contain{
@@ -1258,6 +1329,11 @@ video {
 .object-cover{
   -o-object-fit: cover;
      object-fit: cover;
+}
+
+.object-bottom{
+  -o-object-position: bottom;
+     object-position: bottom;
 }
 
 .object-center{
@@ -1347,11 +1423,6 @@ video {
   padding-bottom: 0.5rem;
 }
 
-.py-20{
-  padding-top: 5rem;
-  padding-bottom: 5rem;
-}
-
 .py-3{
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
@@ -1377,6 +1448,15 @@ video {
   padding-bottom: 2rem;
 }
 
+.px-32{
+  padding-left: 8rem;
+  padding-right: 8rem;
+}
+
+.pb-2{
+  padding-bottom: 0.5rem;
+}
+
 .pl-2{
   padding-left: 0.5rem;
 }
@@ -1391,6 +1471,14 @@ video {
 
 .pt-8{
   padding-top: 2rem;
+}
+
+.pt-4{
+  padding-top: 1rem;
+}
+
+.pt-16{
+  padding-top: 4rem;
 }
 
 .text-left{
@@ -1433,6 +1521,10 @@ video {
 .text-7xl{
   font-size: 4.5rem;
   line-height: 1;
+}
+
+.text-\[0\.7rem\]{
+  font-size: 0.7rem;
 }
 
 .text-\[0\.9rem\]{
@@ -1571,6 +1663,12 @@ video {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
+.shadow-md{
+  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
 .shadow-xl{
   --tw-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
@@ -1579,6 +1677,10 @@ video {
 
 .outline-transparent{
   outline-color: transparent;
+}
+
+.outline-semiBlue{
+  outline-color: #72AEC8;
 }
 
 .filter{
@@ -1665,6 +1767,12 @@ body{
   background-color: rgb(39 39 39 / 0.8);
 }
 
+.hover\:scale-105:hover{
+  --tw-scale-x: 1.05;
+  --tw-scale-y: 1.05;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
 .hover\:scale-110:hover{
   --tw-scale-x: 1.1;
   --tw-scale-y: 1.1;
@@ -1702,6 +1810,10 @@ body{
 .hover\:border-white:hover{
   --tw-border-opacity: 1;
   border-color: rgb(255 255 255 / var(--tw-border-opacity));
+}
+
+.hover\:border-l-transparent:hover{
+  border-left-color: transparent;
 }
 
 .hover\:bg-gray-200:hover{
@@ -1752,6 +1864,21 @@ body{
 .disabled\:bg-gray-500:disabled{
   --tw-bg-opacity: 1;
   background-color: rgb(107 114 128 / var(--tw-bg-opacity));
+}
+
+.disabled\:bg-gray-400:disabled{
+  --tw-bg-opacity: 1;
+  background-color: rgb(156 163 175 / var(--tw-bg-opacity));
+}
+
+.disabled\:bg-gray-300:disabled{
+  --tw-bg-opacity: 1;
+  background-color: rgb(209 213 219 / var(--tw-bg-opacity));
+}
+
+.disabled\:text-gray-400:disabled{
+  --tw-text-opacity: 1;
+  color: rgb(156 163 175 / var(--tw-text-opacity));
 }
 
 .group:hover .group-hover\:scale-110{
@@ -1833,8 +1960,16 @@ body{
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
+  .md\:grid-cols-3{
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+
   .md\:grid-cols-5{
     grid-template-columns: repeat(5, minmax(0, 1fr));
+  }
+
+  .md\:grid-rows-1{
+    grid-template-rows: repeat(1, minmax(0, 1fr));
   }
 
   .md\:flex-row{
@@ -1888,6 +2023,10 @@ body{
     padding: 0.5rem;
   }
 
+  .md\:p-4{
+    padding: 1rem;
+  }
+
   .md\:px-4{
     padding-left: 1rem;
     padding-right: 1rem;
@@ -1903,6 +2042,11 @@ body{
     padding-bottom: 1rem;
   }
 
+  .md\:px-0{
+    padding-left: 0px;
+    padding-right: 0px;
+  }
+
   .md\:text-3xl{
     font-size: 1.875rem;
     line-height: 2.25rem;
@@ -1911,6 +2055,11 @@ body{
   .md\:text-base{
     font-size: 1rem;
     line-height: 1.5rem;
+  }
+
+  .md\:text-sm{
+    font-size: 0.875rem;
+    line-height: 1.25rem;
   }
 
   .md\:text-xl{
@@ -1958,8 +2107,20 @@ body{
 }
 
 @media (min-width: 1024px){
+  .lg\:col-span-1{
+    grid-column: span 1 / span 1;
+  }
+
+  .lg\:col-span-2{
+    grid-column: span 2 / span 2;
+  }
+
   .lg\:block{
     display: block;
+  }
+
+  .lg\:grid{
+    display: grid;
   }
 
   .lg\:aspect-auto{
