added jwt authentication

--- a/client/src/style/index.css
+++ b/client/src/style/index.css
@@ -646,16 +646,8 @@ video {
   grid-column: span 2 / span 2;
 }
 
-.col-span-3{
-  grid-column: span 3 / span 3;
-}
-
 .col-span-4{
   grid-column: span 4 / span 4;
-}
-
-.row-span-1{
-  grid-row: span 1 / span 1;
 }
 
 .mx-2{
@@ -763,10 +755,6 @@ video {
   margin-top: -0.9rem;
 }
 
-.mr-auto{
-  margin-right: auto;
-}
-
 .block{
   display: block;
 }
@@ -809,6 +797,10 @@ video {
 
 .h-0{
   height: 0px;
+}
+
+.h-2{
+  height: 0.5rem;
 }
 
 .h-36{
@@ -864,16 +856,24 @@ video {
   height: 100vh;
 }
 
+.h-4{
+  height: 1rem;
+}
+
+.h-8{
+  height: 2rem;
+}
+
 .max-h-\[50rem\]{
   max-height: 50rem;
 }
 
-.min-h-\[500px\]{
-  min-height: 500px;
-}
-
 .min-h-\[30rem\]{
   min-height: 30rem;
+}
+
+.min-h-\[500px\]{
+  min-height: 500px;
 }
 
 .w-1\/3{
@@ -920,15 +920,6 @@ video {
   width: 100vw;
 }
 
-.w-fit{
-  width: -moz-fit-content;
-  width: fit-content;
-}
-
-.w-\[100px\]{
-  width: 100px;
-}
-
 .max-w-\[500px\]{
   max-width: 500px;
 }
@@ -941,6 +932,10 @@ video {
   flex: 1 1 0%;
 }
 
+.flex-\[0\.1\]{
+  flex: 0.1;
+}
+
 .flex-\[0\.5\]{
   flex: 0.5;
 }
@@ -949,8 +944,8 @@ video {
   flex: 0.8;
 }
 
-.flex-\[0\.2\]{
-  flex: 0.2;
+.flex-\[0\.9\]{
+  flex: 0.9;
 }
 
 .table-auto{
@@ -1003,10 +998,6 @@ video {
 
 .grid-cols-\[auto\]{
   grid-template-columns: auto;
-}
-
-.grid-cols-5{
-  grid-template-columns: repeat(5, minmax(0, 1fr));
 }
 
 .grid-rows-2{
@@ -1120,10 +1111,6 @@ video {
   align-self: flex-start;
 }
 
-.justify-self-end{
-  justify-self: end;
-}
-
 .overflow-hidden{
   overflow: hidden;
 }
@@ -1188,20 +1175,12 @@ video {
   border-right-width: 0px;
 }
 
-.border-t-2{
-  border-top-width: 2px;
-}
-
 .border-r-2{
   border-right-width: 2px;
 }
 
-.border-l-2{
-  border-left-width: 2px;
-}
-
-.border-l-8{
-  border-left-width: 8px;
+.border-t-2{
+  border-top-width: 2px;
 }
 
 .border-dark{
@@ -1242,12 +1221,6 @@ video {
   border-color: transparent;
 }
 
-.border-x-semiBlue{
-  --tw-border-opacity: 1;
-  border-left-color: rgb(114 174 200 / var(--tw-border-opacity));
-  border-right-color: rgb(114 174 200 / var(--tw-border-opacity));
-}
-
 .border-b-\[\#E1E1E1\]{
   --tw-border-opacity: 1;
   border-bottom-color: rgb(225 225 225 / var(--tw-border-opacity));
@@ -1261,10 +1234,6 @@ video {
 .border-l-semiBlue{
   --tw-border-opacity: 1;
   border-left-color: rgb(114 174 200 / var(--tw-border-opacity));
-}
-
-.border-l-transparent{
-  border-left-color: transparent;
 }
 
 .bg-\[\#F5F5F3\]{
@@ -1291,9 +1260,9 @@ video {
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
 }
 
-.bg-gray-300{
+.bg-gray-200{
   --tw-bg-opacity: 1;
-  background-color: rgb(209 213 219 / var(--tw-bg-opacity));
+  background-color: rgb(229 231 235 / var(--tw-bg-opacity));
 }
 
 .bg-lightWhite{
@@ -1314,11 +1283,6 @@ video {
 .bg-white{
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
-.bg-gray-200{
-  --tw-bg-opacity: 1;
-  background-color: rgb(229 231 235 / var(--tw-bg-opacity));
 }
 
 .object-contain{
@@ -1448,11 +1412,6 @@ video {
   padding-bottom: 2rem;
 }
 
-.px-32{
-  padding-left: 8rem;
-  padding-right: 8rem;
-}
-
 .pb-2{
   padding-bottom: 0.5rem;
 }
@@ -1471,14 +1430,6 @@ video {
 
 .pt-8{
   padding-top: 2rem;
-}
-
-.pt-4{
-  padding-top: 1rem;
-}
-
-.pt-16{
-  padding-top: 4rem;
 }
 
 .text-left{
@@ -1679,10 +1630,6 @@ video {
   outline-color: transparent;
 }
 
-.outline-semiBlue{
-  outline-color: #72AEC8;
-}
-
 .filter{
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
@@ -1812,10 +1759,6 @@ body{
   border-color: rgb(255 255 255 / var(--tw-border-opacity));
 }
 
-.hover\:border-l-transparent:hover{
-  border-left-color: transparent;
-}
-
 .hover\:bg-gray-200:hover{
   --tw-bg-opacity: 1;
   background-color: rgb(229 231 235 / var(--tw-bg-opacity));
@@ -1861,19 +1804,14 @@ body{
   cursor: no-drop;
 }
 
-.disabled\:bg-gray-500:disabled{
-  --tw-bg-opacity: 1;
-  background-color: rgb(107 114 128 / var(--tw-bg-opacity));
-}
-
-.disabled\:bg-gray-400:disabled{
-  --tw-bg-opacity: 1;
-  background-color: rgb(156 163 175 / var(--tw-bg-opacity));
-}
-
 .disabled\:bg-gray-300:disabled{
   --tw-bg-opacity: 1;
   background-color: rgb(209 213 219 / var(--tw-bg-opacity));
+}
+
+.disabled\:bg-gray-500:disabled{
+  --tw-bg-opacity: 1;
+  background-color: rgb(107 114 128 / var(--tw-bg-opacity));
 }
 
 .disabled\:text-gray-400:disabled{
@@ -2007,6 +1945,10 @@ body{
          column-gap: 2rem;
   }
 
+  .md\:gap-y-0{
+    row-gap: 0px;
+  }
+
   .md\:place-self-center{
     place-self: center;
   }
@@ -2027,6 +1969,11 @@ body{
     padding: 1rem;
   }
 
+  .md\:px-0{
+    padding-left: 0px;
+    padding-right: 0px;
+  }
+
   .md\:px-4{
     padding-left: 1rem;
     padding-right: 1rem;
@@ -2040,11 +1987,6 @@ body{
   .md\:py-4{
     padding-top: 1rem;
     padding-bottom: 1rem;
-  }
-
-  .md\:px-0{
-    padding-left: 0px;
-    padding-right: 0px;
   }
 
   .md\:text-3xl{
@@ -2154,6 +2096,10 @@ body{
   .lg\:gap-x-28{
     -moz-column-gap: 7rem;
          column-gap: 7rem;
+  }
+
+  .lg\:p-8{
+    padding: 2rem;
   }
 
   .lg\:px-16{
